# Contract2Agent

./: .gitattributes  .gitignore  AGENTS.md  README.md  README.zh-CN.md  bug_audit.md  mkdocs.yml  pyproject.toml
.codex/: config.toml
.github/workflows/: docs.yml
contract2agent/: README.md  __init__.py  baseline.py  capabilities.py  checker.py  cli.py  compiler.py  counterexamples.py  diagnosis.py  diagnosis_schema.py  diagnostic_modes.py  failure_taxonomy.py  generator.py  parser.py  path_safety.py  schema.py
contract2agent/cost_estimate/: README.md  __init__.py  auto_plan.py  cli.py  commands.py  complexity.py  cost_drivers.py  failure_cost.py  guardrails.py  llm_calls.py  loader.py  mode_comparison.py  models.py  report.py  review.py  rules.py  runtime.py  slow_paths.py  test_count.py  (+2 more)
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  CODEMAP.md  DECISIONS.md  GOLDEN_PRINCIPLES.md  PROJECT_CONTEXT.md  README.md  auto.md  baselines.md  cli.md  configuration.md  deep.md  development.md  examples.md  failure-taxonomy.md  getting-started.md  index.html  index.md  patch-preview.md  playground.md  quick.md  reports.md  time-cost.md  triage.md
examples/: README.md
scripts/: README.md  check_docs_links.py
tests/: conftest.py  test_agent_evaluation_framework.py  test_baseline.py  test_contract2agent.py  test_cost_estimate.py  test_diagnosis_schema.py  test_diagnostic_modes.py  test_docs_site.py  test_failure_taxonomy.py  test_file_reading_docs_examples.py  test_file_reading_eval.py  test_file_reading_llm_judge.py  test_patch_preview.py  test_privacy_eval.py  test_triage.py
(+122 files in other folders)
