[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttracedoctor"
version = "0.1.0"
description = "Offline trace-based diagnosis and repair suggestions for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AgentTraceDoctor Contributors" }
]
dependencies = [
  "typer>=0.9",
  "pydantic>=1.10",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "pymdown-extensions"
]

[project.scripts]
c2a = "contract2agent.cli:main"
agentdoctor = "contract2agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["contract2agent*"]

[tool.setuptools.package-data]
contract2agent = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
